--- a/generator/languages/ws.json
+++ b/generator/languages/ws.json
@@ -41,7 +41,7 @@
 		"info3": "",
 		"facts_and_stats": "",
 		"links_heading": "",
-		"link_github": "",
+		"link_git": "",
 		"link_graphic_calendar": "",
 		"link_graphic_network": "",
 		"link_translation": "",
