--- a/generator/languages/en.json
+++ b/generator/languages/en.json
@@ -84,7 +84,7 @@
 		/* embed texts */
 		"license_info": "This application is licensed under <a target=\"_blank\" href=\"http://creativecommons.org/licenses/by/3.0\">CC-BY license</a> and may be embedded in blogs and other media:",
 		"created_by": "Provided by",
-		"embed_info": "For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href=\"http://apps.opendatacity.de/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href=\"http://apps.opendatacity.de/vds/frame_en.html#tab=social\" target=\"_blank\">social network</a> will be displayed.</li></ul>",
+		"embed_info": "For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social\" target=\"_blank\">social network</a> will be displayed.</li></ul>",
 		"close": "Close"
 	},
 
