--- a/generator/languages/fr.json
+++ b/generator/languages/fr.json
@@ -84,7 +84,7 @@
 		/* embed texts */
 		"license_info": "Cette application est mise à disposition sous licence <a target=\"_blank\" href=\"http://creativecommons.org/licenses/by/3.0\">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:",
 		"created_by": "Fourni par",
-		"embed_info": "Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href=\"http://apps.opendatacity.de/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href=\"http://apps.opendatacity.de/vds/frame_en.html#tab=social\" target=\"_blank\">réseau social</a> sera affiché.</li></ul>",
+		"embed_info": "Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social\" target=\"_blank\">réseau social</a> sera affiché.</li></ul>",
 		"close": "Fermer"
 	},
 
