--- a/generator/languages/en.json
+++ b/generator/languages/en.json
@@ -44,7 +44,7 @@
 		"text_social_info3": "Balthasar's entire personal environment, consisting of family, friends and colleagues, can be determined based on his 22'324 e-mails.",
 		
 		/* footer text */
-		"footer": "Created by <a href=\"https://opendatacity.de/\" target=\"_blank\">OpenDataCity</a>. About the data source: <a href=\"http://www.digitale-gesellschaft.ch/dr\" target=\"_blank\">digiges.ch</a>. Application is licensed under <a href=\"http://creativecommons.org/licenses/by/3.0/\" target=\"_blank\">CC-BY 3.0</a>."
+		"footer": "Created by <a href=\"https://opendatacity.de/\" target=\"_blank\">OpenDataCity</a>. About the data source: <a href=\"https://www.digitale-gesellschaft.ch/dr\" target=\"_blank\">digiges.ch</a>. Application is licensed under <a href=\"https://creativecommons.org/licenses/by/3.0/\" target=\"_blank\">CC-BY 3.0</a>."
 	},
 
 	/* text blocks that are used on the homepage */
@@ -65,9 +65,9 @@
 		"embed": "Embed",
 
 		/* info texts */
-		"info1": "<a href=\"http://www.balthasar-glaettli.ch/\" target=\"_blank\">Balthasar Glättli</a>, member of the National Council for The Green Party in Switzerland, has provided <a href=\"https://opendatacity.de\">OpenDataCity</a> with parts of his retained data of six month for this visualization. As a result, these retained data reveal what secret services and law inforcement call \"profile\" - a comprehensive picture of the entire life of the monitored person.",
+		"info1": "<a href=\"https://www.balthasar-glaettli.ch/\" target=\"_blank\">Balthasar Glättli</a>, member of the National Council for The Green Party in Switzerland, has provided <a href=\"https://opendatacity.de\">OpenDataCity</a> with parts of his retained data of six month for this visualization. As a result, these retained data reveal what secret services and law inforcement call \"profile\" - a comprehensive picture of the entire life of the monitored person.",
 		"info2": "The visualization is based on the same metadata of the telephone and mail traffic, that are recorded as part of the data retention. For further background information please visit the websites of our project partner <a href=\"https://www.digitale-gesellschaft.ch/dr.html \"target=\"_blank \">Digital Society Switzerland</a>.",
-		"info3": "We provide this visualization under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a> license, so everyone (newspapers, blogs, etc.) can embed the application and use the graphics freely.",
+		"info3": "We provide this visualization under a <a rel=\"license\" href=\"https://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a> license, so everyone (newspapers, blogs, etc.) can embed the application and use the graphics freely.",
 		"facts_and_stats": "<strong>Additional facts and statistics:</strong><ul><li>The retained e-mail and mobile communication data cover a <strong>period of 6 month</strong> (exactly 179 days).</li><li>During this period a total of <strong>7'112 database entries</strong> on the mobile phone were recorded. Of these, 2'610 entries for Internet connections (36.7%, 14.6 per Day), 3'085 SMS/MMS (43.4%, 17.2 per day) and 1'417 entries for calls (19.9%, 7.9 per day)</li><li>Balthasar caused a total of 5'161'133'870 Bytes (<strong>5.2 GB</strong> - 28.8 MB per day) <strong>Internet traffic</strong> with his mobile phone. Of which 979'745'187 Bytes (980 MB - 5.5 MB per day) were uploaded and 4'181'388'683 Bytes (4.2 GB - 23.4 MB per day) were downloaded.</li><li>As the location of the mobile phone is detected with every phone call, every text message and every Internet connection, we can analyze <strong>Balthasar's movement</strong>. His highest speed was about 180 km/h during a train ride on 09.04.2013 at 15:15. Overall, he has traveled a distance of at least 16'000 km during the 6 months.</li><li>E-mail metadata are recorded too as part of the data retention. Within 6 months Balthasar has received a total of <strong>14'638 E-Mails</strong> (82 per day) from about 6'500 people. He has sent 1'654 E-Mails (9 per day) to 600 people.</li></ul>",
 		
 		/* list of links */
@@ -78,11 +78,11 @@
 		"link_translation": "Help us to translate this app into other languages: <a href=\"https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages\">git.xiala.net/digiges/vds-suisse/.../languages</a>.",
 		
 		/* footer */
-		"footer_left": "Created by <a href=\"https://opendatacity.de/\">OpenDataCity</a>. The application is licensed under <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a>.",
+		"footer_left": "Created by <a href=\"https://opendatacity.de/\">OpenDataCity</a>. The application is licensed under <a rel=\"license\" href=\"https://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a>.",
 		"footer_right": "<a href=\"https://opendatacity.de/impressum/\" target=\"_blank\">Imprint</a>",
 		
 		/* embed texts */
-		"license_info": "This application is licensed under <a target=\"_blank\" href=\"http://creativecommons.org/licenses/by/3.0\">CC-BY license</a> and may be embedded in blogs and other media:",
+		"license_info": "This application is licensed under <a target=\"_blank\" href=\"https://creativecommons.org/licenses/by/3.0\">CC-BY license</a> and may be embedded in blogs and other media:",
 		"created_by": "Provided by",
 		"embed_info": "For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social\" target=\"_blank\">social network</a> will be displayed.</li></ul>",
 		"close": "Close"
