--- a/generator/languages/fr.json
+++ b/generator/languages/fr.json
@@ -44,7 +44,7 @@
 		"text_social_info3": "L'environnement social de Balthasar, sa famille, ses amis et ses collègues se déduit de ses 22'324 e-mails.",
 		
 		/* footer text */
-		"footer": "Créé par <a href=\"https://opendatacity.de/\" target=\"_blank\">OpenDataCity</a>. Source des données: <a href=\"http://www.digitale-gesellschaft.ch/cdp\" target=\"_blank\">digiges.ch</a>. L'application est sous licence <a href=\"http://creativecommons.org/licenses/by/3.0/\" target=\"_blank\">CC-BY 3.0</a>."
+		"footer": "Créé par <a href=\"https://opendatacity.de/\" target=\"_blank\">OpenDataCity</a>. Source des données: <a href=\"https://www.digitale-gesellschaft.ch/cdp\" target=\"_blank\">digiges.ch</a>. L'application est sous licence <a href=\"https://creativecommons.org/licenses/by/3.0/\" target=\"_blank\">CC-BY 3.0</a>."
 	},
 
 	/* text blocks that are used on the homepage */
@@ -65,9 +65,9 @@
 		"embed": "Intégrer",
 
 		/* info texts */
-		"info1": "<a href=\"http://www.balthasar-glaettli.ch/\" target=\"_blank\">Balthasar Glättli</a>, conseiller national du groupe des Verts, a mis à disposition de <a href=\"https://opendatacity.de\">OpenDataCity</a> une partie des données collectées pendant 6 mois pour cette visualisation. Le résultat est ce que les services secrets et les autorités pénales appellent un \"profil\" - une image complète de la vie d'une personne sous surveillance.",
+		"info1": "<a href=\"https://www.balthasar-glaettli.ch/\" target=\"_blank\">Balthasar Glättli</a>, conseiller national du groupe des Verts, a mis à disposition de <a href=\"https://opendatacity.de\">OpenDataCity</a> une partie des données collectées pendant 6 mois pour cette visualisation. Le résultat est ce que les services secrets et les autorités pénales appellent un \"profil\" - une image complète de la vie d'une personne sous surveillance.",
 		"info2": "Cette visualisation est basée sur le même type de métadonnées du trafic e-mail et téléphonique dont la sauvegarde des données personnelles fait l'objet. Pour plus d'informations, consultez les informations de notre partenaire <a href=\"https://www.digitale-gesellschaft.ch/cdp.html \"target=\"_blank \">Société numérique suisse</a>.",
-		"info3": "Nous mettons à disposition cette visualisation sous licence <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a> de manière à ce que quiconque (journaux, blogs, etc) puisse intégrer l'application et utiliser les graphiques librement.",
+		"info3": "Nous mettons à disposition cette visualisation sous licence <a rel=\"license\" href=\"https://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a> de manière à ce que quiconque (journaux, blogs, etc) puisse intégrer l'application et utiliser les graphiques librement.",
 		"facts_and_stats": "<strong>Informations et statistiques:</strong><ul><li>Les informations conservées sur les e-mails et les communications mobiles couvrent une <strong>période de 6 mois</strong> (179 jours exactement).</li><li>Durant cette période, un total de <strong>7'112 entrées</strong> ont été enregistrées sur le téléphone mobile. Il s'agit de 2'610 entrées concernant les connexions Internet (36.7%, 14.6 par jour), 3'085 SMS/MMS (43.4%, 17.2 par jour) et 1'417 entrées pour des appels (19.9%, 7.9 par jour)</li><li>Balthasar a provoqué du <strong>trafic Internet</strong> comptant pour 5'161'133'870 octets (<strong>5.2 GB</strong> - 28.8 MB par jour) sur son téléphone mobile. De ces octets, 979'745'187 (980 MB - 5.5 MB par jour) étaient du trafic montant et 4'181'388'683 octets (4.2 GB - 23.4 MB par jour) du trafic descendant.</li><li>Comme la position du mobile est détectée à chaque appel, chaque message et chaque connexion Internet, il est possible d'analyser les <strong>déplacements de Balthasar</strong>. Sa vitesse la plus grande était d'environ 180 km/h pendant un voyage en train le 9.4.2013 à 15:15. Globalement, il a voyagé au moins 16'000 km pendant ces 6 mois.</li><li>Les métadonnées du courrier électronique ont été également enregistrées. En 6 mois, Balthasar a reçu un total de <strong>14'638 e-mails</strong> (82 par jour) de 6'500 personnes. Il a envoyé 1'654 e-mails (9 par jour) à 600 personnes.</li></ul>",
 		
 		/* list of links */
@@ -78,11 +78,11 @@
 		"link_translation": "Aidez-nous à traduire cette application dans d'autres langues: <a href=\"https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages\">git.xiala.net/digiges/vds-suisse/.../languages</a>.",
 		
 		/* footer */
-		"footer_left": "Créé par <a href=\"https://opendatacity.de/\">OpenDataCity</a>. L'application est mise à disposition sous licence <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a>.",
+		"footer_left": "Créé par <a href=\"https://opendatacity.de/\">OpenDataCity</a>. L'application est mise à disposition sous licence <a rel=\"license\" href=\"https://creativecommons.org/licenses/by/3.0/\">CC-BY 3.0</a>.",
 		"footer_right": "<a href=\"https://opendatacity.de/impressum/\" target=\"_blank\">Impressum</a>",
 		
 		/* embed texts */
-		"license_info": "Cette application est mise à disposition sous licence <a target=\"_blank\" href=\"http://creativecommons.org/licenses/by/3.0\">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:",
+		"license_info": "Cette application est mise à disposition sous licence <a target=\"_blank\" href=\"https://creativecommons.org/licenses/by/3.0\">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:",
 		"created_by": "Fourni par",
 		"embed_info": "Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar\" target=\"_blank\">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href=\"https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social\" target=\"_blank\">réseau social</a> sera affiché.</li></ul>",
 		"close": "Fermer"
